# middleware-services

./: .consumer.env.example  .dockerignore  .dtransfer.dev.env.example  .dtransfer.env.example  .dtransfer.pro.env.example  .dtransfer.prod.env.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dtransfer.Dockerfile  README.md  cli.py  docker-compose.yml  logging.conf  logging.ini  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  run-consumer.py  run-dtransfer.py
.github/workflows/: tests.yml
consumer/: README.md  config.py  main.py
consumer/models/: devices.py
consumer/routers/: auth.py  devices.py  inventory.py  snipe_it.py  support.py  ucam.py
consumer/schemas/: device.py  inventory.py  patient.py  token.py  ucam.py
consumer/services/: inventory.py  ucam.py
consumer/utils/: errors.py  general.py
data_transfer/: README.md  config.py  database.py  main.py
data_transfer/dags/: btf.py  drm.py  sma.py  tfa.py
data_transfer/db/: __init__.py  main.py
data_transfer/devices/: byteflies.py  dreem.py  thinkfast.py  vtt.py  vttsma.py
data_transfer/dmp_tools/: README.md  contribution_diff.py  site_overview.py
data_transfer/jobs/: byteflies.py  dmp.py  dreem.py  example.py  shared.py  vtt.py  vttsma.py
data_transfer/lib/: byteflies.py  dreem.py  mcroberts.py  thinkfast.py  vtt.py  vttsma.py
data_transfer/lib/mcroberts/: transform_omx_names.py  transform_processed_names.py
data_transfer/lib/mcroberts/lookups/: meta.csv  patients.csv
data_transfer/preprocessing/: main.py  preparation.py
data_transfer/schemas/: record.py  ucam.py
data_transfer/services/: dmpy.py  inventory.py  ucam.py
data_transfer/tasks/: byteflies.py  dreem.py  shared.py  thinkfast.py  vtt.py  vttsma.py
data_transfer/utils/: __init__.py
local/: README.md  oddities.csv.example
src/: main.py
tests/consumer/: conftest.py  test_inventory.py
tests/consumer/routers/: conftest.py  test_inventory.py
tests/consumer_tests/routers/: conftest.py  test_inventory.py  test_ucam.py
tests/consumer_tests/routers/data/: mock_ucam.json
tests/data_transfer/services/: conftest.py  test_ucam.py
tests/data_transfer/services/data/: mock_ucam_db.csv
tests/data_transfer_tests/byteflies/: conftest.py  test_byteflies.py
tests/data_transfer_tests/byteflies/data/: byteflies_itemised.json  byteflies_payload.json  mock_btf_file.csv
tests/data_transfer_tests/schemas/: test_record.py
tests/data_transfer_tests/services/: conftest.py  test_inventory.py  test_ucam.py  test_utils.py
tests/data_transfer_tests/services/data/: mock_consumer_ucam.json
tests/data_transfer_tests/services/data/inventory/: devices_bytype.json  history.json  mock_devices_bytype.json
tests/data_transfer_tests/utils/: test_utils.py
