[tool.poetry]
name = "consumer"
version = "0.1.0"
description = "Hosts the middleware services for IDEA-FAST, including: data transfer protocols and application consumer APIs."
authors = ["Drew Miley <drew.miley@ncl.ac.uk>", "Jay Rainey <jay.rainey@ncl.ac.uk>"]
homepage = "https://github.com/ideafast/middleware-services"
repository = "https://github.com/ideafast/middleware-services"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
fastapi_utils = "^0.2.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.8"

[tool.poetry.scripts]
start = "consumer.main:main"
transfer = "data_transfer.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
